--- a/public/style.css
+++ b/public/style.css
@@ -89,6 +89,7 @@
   
   .stories {
     display: flex;
+    flex-direction: row;
     align-items: center;
     height: 118px;
     border-radius: 3px;
@@ -116,7 +117,7 @@
     align-items: center;
     height: 66px;
     width: 66px;
-    background-image: url('../assets/img/story-circle.svg');
+    background-image: url('../src/assets/stories_background.jpg');
     
   }
   
